--- a/404.md
+++ b/404.md
@@ -1,12 +1,11 @@
 ---
 permalink: /404.html
+sitemap: false
 title: "Page Not Found"
 ---
 
 # Page Not Found
 
-Sorry, the page you are looking for does not exist. Perhaps it's still in the creative process or has not been added yet.
-
-If you believe this is an error, please contact the site administrator.
+Clicking on random links like the one you just did can expose you to malware, how srupid can you be man [ - ]
 
 [Go back to the home page](/)
