--- a/404.md
+++ b/404.md
@@ -6,6 +6,6 @@ title: "Page Not Found"
 
 # Page Not Found
 
-Clicking on random links like the one you just did can expose you to malware, how srupid can you be man [ - ]
+Clicking on random links like the one you just did can expose you to malware, how stupid can you be man |- ^ -|
 
 [Go back to the home page](/)
