--- a/404.md
+++ b/404.md
@@ -4,6 +4,6 @@ sitemap: false
 title: "Page Not Found"
 ---
 
-Clicking on random links like the one you just did can expose you to malware, how stupid can you be man Q ^ Q.
+Clicking on random links like the one you just did can expose you to malware, or possibly finding hot singles in your area, how stupid can you be man? Q ^ Q.
 
 [Go back to the home page](/)
